# sorter

./: .gitattributes  .gitignore  .scrutinizer.yml  README.md  composer.json  kwcms.json  license.txt  phpstan.neon  phpunit.xml  pyproject.toml  setup.py
.github/workflows/: code_checks.yml
kw_sorter/: interfaces.py  sorter.py
kw_tests/: common_class.py  test_basic.py
php-src/: ISortColumn.php  ISortEntry.php  ISorter.php  SortByEntry.php  SortColumn.php  Sorter.php
php-src/Interfaces/: ISortEntry.php  ISorter.php
php-tests/: CommonTestClass.php  _bootstrap.php
php-tests/BasicTests/: BasicTest.php
