[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "" }

[project]
name = "kw_sorter"
version = "1.0.3"
authors = [
  { name="Petr Plsek", email="me@kalanys.com" },
]
description = "Shareable sorter - basic interfaces"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    'Environment :: Web Environment',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
"Homepage" = "https://github.com/alex-kalanis/sorter"
"Bug Tracker" = "https://github.com/alex-kalanis/sorter/issues"
